# ztbus-energy-model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG_v0.9.0.md  LICENSE  Makefile  README.md  Snakefile  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
configs/cleaning/: v1.yaml
configs/data/: ztbus.yaml
configs/hpc/: slurm.yaml
configs/physics/: hess_lightram_19.yaml
data/: README.md
docs/: architecture.md  hpc_runbook.md
docs/decisions/: 0001-polars-parquet.md
dump/: README.md
dump/scripts/: add_regen_gate.py  add_windowed_grade.py  apply_strong_priors.py  build_grid_aware_full_run.py  build_production_stack.py  build_two_stage_fit.py  cmaes_parallel.py  fit_production.py  generate_supervisor_figures.py  numpy_parity_check.py  smoke_one_month.py  two_stage_fit.py  v3_followups.py  widen_priors_v1.py  wls_two_stage.py
dump/scripts/IAGWO/: iagwo_ztbus_energy_tradeoffs_trendlines_all_datasets_Version4.py  inspect_parquet.py
dump/scripts/PGWO/: PGWO.py  inspect_parquet.py
legacy/: README.md  prepare_ztbus_v0.py  updated_energy_calculation_supervisor_original.py
notebooks/: 00_quickstart.ipynb
scripts/: ingest_one.py  ingest_summary.py
slurm/: README.md  clean_array.sbatch  fit_full_two_stage.sbatch  fit_one_bus_v0.sbatch  ingest.sbatch
src/ztbus/: __init__.py  cli.py
src/ztbus/cleaning/: __init__.py  altitude.py  config.py  gnss.py  grade.py  pipeline.py  power.py  speed.py  temperature.py  timestamps.py
src/ztbus/eda/: __init__.py  profiling.py
src/ztbus/features/: __init__.py  derived.py  kinematics.py
src/ztbus/io/: __init__.py  readers.py  writers.py
src/ztbus/optim/: __init__.py  data.py  kernels.py  model.py  model_electrical.py  model_traction.py  samplers.py
src/ztbus/physics/: __init__.py  parameters.py  powertrain.py
src/ztbus/qc/: __init__.py  gates.py
src/ztbus/routes/: __init__.py  depot.py
tests/: test_cleaning.py  test_data_loader.py  test_io.py  test_kernels_parity.py  test_model_smoke.py  test_physics.py  test_samplers_self_recovery.py
