[project]
name = "ztbus-energy-model"
version = "0.1.0"
description = "Physics-based energy model identification and validation on the ZTBus dataset."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "ZTBus Energy Model Team" },
]
keywords = ["bus", "electric vehicle", "energy model", "system identification", "ZTBus"]

# ----------------------------------------------------------------------------
# Runtime dependencies
# Pinned to a tested combination. Bump deliberately, never opportunistically.
# ----------------------------------------------------------------------------
dependencies = [
    # I/O and data
    "polars>=1.20,<2.0",          # primary dataframe engine (lazy + streaming)
    "pyarrow>=18.0",              # parquet writer, arrow interop
    "duckdb>=1.1",                # ad-hoc SQL over parquet (EDA, QC)
    "fsspec>=2024.10",            # filesystem abstraction (local + scratch)
    # Numerics and physics
    "numpy>=2.0,<3.0",
    "scipy>=1.14",                # solvers, signal filtering, optimization
    "numba>=0.60",                # JIT for hot inner loops in parameter ID
    # Configuration and validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "omegaconf>=2.3",             # YAML configs with hierarchical merge
    # Geospatial (route reconstruction, depot detection)
    "pyproj>=3.7",                # WGS84 ↔ projected coords
    "shapely>=2.0",
    "rtree>=1.3",
    # CLI and ergonomics
    "typer>=0.13",
    "rich>=13.9",
    "loguru>=0.7",                # structured logging, sane defaults
    "tqdm>=4.66",
    # Plotting (kept minimal here; notebooks add more)
    "matplotlib>=3.9",
    # Pipeline orchestration
    "snakemake>=8.20",
    "snakemake-executor-plugin-slurm>=0.11",
    "scikit-learn>=1.8.0",
    "jax>=0.10.0",
    "numpyro>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",          # property-based tests for cleaning invariants
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
notebook = [
    "jupyterlab>=4.3",
    "ipykernel>=6.29",
    "seaborn>=0.13",
    "plotly>=5.24",
    "contextily>=1.6",            # basemaps for GNSS plots
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
ztbus = "ztbus.cli:app"

# ----------------------------------------------------------------------------
# Build backend: uv-friendly setuptools
# ----------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle, pyflakes
    "I",               # isort
    "N",               # pep8-naming
    "UP",              # pyupgrade
    "B",               # bugbear
    "SIM",             # simplify
    "RUF",             # ruff-specific
    "PL",              # pylint subset
    "NPY",             # numpy-specific
]
ignore = [
    "PLR0913",         # too many arguments — common in physics functions
    "PLR2004",         # magic value comparison — physics constants are fine
    "RUF002",          # ambiguous unicode in docstrings — we use ° × − legitimately in physics
    "RUF003",          # ditto for comments
]

[tool.ruff.lint.per-file-ignores]
# Physics modules use uppercase variable names matching the literature
# (P_mech, F_aero, T, R, etc.). These are NOT style violations — they are the
# notation used in Beckers et al. (2021) and the broader vehicle dynamics
# literature. Renaming them to lowercase would harm readability.
"src/ztbus/physics/*"   = ["N802", "N803", "N806", "N815"]
"src/ztbus/features/*"  = ["N802", "N803", "N806", "N815"]
"src/ztbus/cleaning/*"  = ["N802", "N803", "N806", "N815"]
"src/ztbus/routes/*"    = ["N802", "N803", "N806", "N815"]
"src/ztbus/qc/*"        = ["N802", "N803", "N806", "N815"]
"src/ztbus/optim/*"     = ["N802", "N803", "N806", "N815"]
"dump/scripts/*"        = ["N802", "N803", "N806", "N815"]
# CLI uses the standard Typer pattern (typer.Option in defaults) and lazy
# imports for fast --help responsiveness. Both are idiomatic, not bugs.
"src/ztbus/cli.py"      = ["B008", "PLC0415"]
"scripts/*"             = ["PLC0415"]
# E402 added so that jax.config.update(...) can precede module imports,
# which JAX requires for things like enable_x64 / platform selection.
"tests/*"               = ["PLR2004", "S101", "N806", "N803", "PLC0415", "E402"]
"notebooks/*"           = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["legacy/", "notebooks/"]

[[tool.mypy.overrides]]
module = ["polars.*", "duckdb.*", "rtree.*", "contextily.*", "snakemake.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=ztbus --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "hpc: marks tests that require an HPC environment",
]
